# poker-face

./: .gitignore  README.md  evaluate_gsm8k.py  evaluate_truncated_gsm8k.py  gsm8k.py  pyproject.toml  requirements.txt  run_gsm8k.sh  truncated_reasoning.py
results/gsm8k/: gsm8k_deepseek-r1-distill-qwen-1.5b.json
utils/: utils.py
visu/: app_gsm8k_viewer.py
