[project]
name = "poker-face"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=2.21.0",
    "huggingface-hub>=0.36.2",
    "lighteval>=0.10.0",
    "matplotlib>=3.10.8",
    "nnsight>=0.5.15",
    "numpy<2",
    "openai>=2.17.0",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "rich>=13.9.4",
    "sae-lens>=1.0.0",
    "safetensors>=0.4.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.2",
    "torch>=2.10.0",
    "transformer-lens>=1.19.0",
    "transformers>=4.57.6",
    "wandb>=0.24.2",
]
